# todo-apps

./: compose-dev.yml  compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/taskapp/: entrypoint.sh
backend/taskapp/taskapp/: asgi.py  settings.py  urls.py  wsgi.py
backend/taskapp/tasks/: api.py  models.py
backend/taskapp/tasks/migrations/: 0001_initial.py
frontend/: Dockerfile  bun.lockb  index.html  package.json  vite.config.mjs
frontend/docker/nginx/: default.conf  server.crt  server.csr  server.key
frontend/src/components/: Login.vue  Todos.vue
frontend/src/composable/: core.js
frontend/src/pages/: index.vue
frontend/src/pages/login/: index.vue
frontend/src/router/: index.js
frontend/src/stores/: app.js
secret/: django.env  postgres.env
